@@ -14,6 +14,8 @@
   * Errors in bodies with deflate and gzip responses now result in a
     Mechanize::Error instead of silently being ignored and causing future
     errors.  Issue #185
+  * Mechanize now raises an UnathorizedError instead of crashing when a 403
+    response does not contain a www-authenticate header.  Issue #181
 
 === 2.1 / 2011-12-20
 
